# QtSideBarTerminal

./: .gitignore  CMakeLists.txt  QtSideBarTerminal.json.in  README.md  qtsidebarterminal.cpp  qtsidebarterminalconstants.h  qtsidebarterminaltr.h  sidebarterminal.cpp  sidebarterminal.h  simpleterminal.cpp  simpleterminal.h  terminalnavigationfactory.cpp  terminalnavigationfactory.h
.fileConvert/: fileConvertHistory
.github/workflows/: README.md  build_cmake.yml
Docs/: sidebarterminal-design.md
release/: QtSideBarTerminal.json  README.md
release/Docs/: sidebarterminal-design.md
